objects/bofc__Manage_Org_Info_MDT__mdt.object
<CustomObject>
    <fields>
        <fullName>bofc__Org_INS__c</fullName>
        <label>Org INS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Org_P__c</fullName>
        <label>Org P</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Org_T__c</fullName>
        <label>Org T</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Org_U__c</fullName>
        <label>Org U</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Manage Org Info_MDT</label>
    <pluralLabel>Manage Org Infos MDT</pluralLabel>
</CustomObject>